Trying to address locale bugs and overflow bug

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -226,6 +226,7 @@
     padding-right: 0.5625rem;
     padding-bottom: 0.5rem;
     padding-left: 1.3125rem;
+    cursor: pointer;
 
     align-self: flex-end;
 
